--- a/config/global_fusion_params.yaml
+++ b/config/global_fusion_params.yaml
@@ -1,20 +1,36 @@
 global_fusion_node:
   ros__parameters:
 
+    # input_gridmaps: [lidar_grid_map, cv_grid_map, cv_grid_map_b, cv_grid_map_c]
     input_gridmaps: [lidar_grid_map, cv_grid_map]
+    fusion_method: ans_grid_map_fusion::Evidential
     lidar_grid_map:
-      topic: lidar_grid_map
+      topic: /elevation_map_raw
       layers: [step, slope]
+      local_fusion: ans_grid_map_fusion::Loggodds
       step:
         reliability: 0.8
       slope: 
         reliability: 0.2
     cv_grid_map:
-      topic: cv_grid_map
+      topic: /grid_map_filter_demo_convex/smoothed_map_test
       layers: [road, footpath]
       road:
         reliability: 0.8
       footpath: 
         reliability: 0.2
-
+    # cv_grid_map_b:
+    #   topic: cv_grid_map_topic_b
+    #   layers: [road, footpath]
+    #   road:
+    #     reliability: 0.8
+    #   footpath: 
+    #     reliability: 0.2
+    # cv_grid_map_c:
+    #   topic: cv_grid_map_topic_c
+    #   layers: [road, footpath]
+    #   road:
+    #     reliability: 0.8
+    #   footpath: 
+    #     reliability: 0.2
     output_topic: /fused_map
