--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(grid_map_msgs REQUIRED)
 find_package(grid_map REQUIRED)
 find_package(grid_map_core REQUIRED)
 find_package(grid_map_ros REQUIRED)
+find_package(builtin_interfaces REQUIRED)
 
 include_directories(
     include
@@ -27,7 +28,7 @@ set(dependencies
   grid_map_core 
   grid_map_ros 
   grid_map_msgs 
-
+  builtin_interfaces
 )
 
 set(fusion_libs
