--- a/config/global_fusion_params.yaml
+++ b/config/global_fusion_params.yaml
@@ -5,21 +5,19 @@ global_fusion_node:
     input_gridmaps: [lidar_grid_map, cv_grid_map]
     fusion_policy_global: ans_grid_map_fusion::EvidentialFusion
     fusion_policy_local: ans_grid_map_fusion::EvidentialFusion
-
+    use_sim_time: false
     lidar_grid_map:
       topic: /elevation_map_raw
-      layers: [elevation, slope_layer]
+      layers: [elevation]
       elevation:
-        reliability: 0.8
-      slope_layer: 
-        reliability: 0.2
+        reliability: 0.1
     cv_grid_map:
       topic: /grid_map_filter_demo_convex/smoothed_map_test
       layers: [step_net_layer, slope_layer]
       step_net_layer:
-        reliability: 0.8
+        reliability: 0.3
       slope_layer: 
-        reliability: 0.2
+        reliability: 0.4
     # cv_grid_map_b:
     #   topic: cv_grid_map_topic_b
     #   layers: [road, footpath]
